# gaqsa

./: docker-compose.yml
backend/: .coveragerc  .env.example  Dockerfile  pyproject.toml
backend/announcements/: admin.py  mails.py  models.py  urls.py  views.py
backend/announcements/migrations/: 0001_initial.py  0002_auto_20211221_1840.py  0003_auto_20220303_0214.py
backend/announcements/serializers/: announcement.py
backend/announcements/templates/: new_announcement.html
backend/backend/: emails.py  prod.wsgi.py  settings.py  staging.wsgi.py  tests.py  urls.py
backend/backend/faker/: __init__.py  animal_group_provider.py  category_provider.py  laboratory_provider.py  product_provider.py  ranch_provider.py  user_email_provider.py
backend/backend/middlewares/: audit_log.py  error_handler.py
backend/backend/templates/: base_email.html
backend/backend/utils/: constants.py  emails.py  files.py  groups.py  permissions.py  product_key.py  tests.py
backend/clients/: admin.py  models.py
backend/clients/factories/: client.py  ranch.py
backend/clients/migrations/: 0001_initial.py  0002_client_invoice_telephone.py  0003_alter_client_user.py
backend/clients/serializers/: client.py  ranch.py
backend/invoices/: admin.py  mails.py  models.py  tests.py  urls.py  views.py
backend/invoices/factories/: invoice.py
backend/invoices/migrations/: 0001_initial.py  0002_auto_20211217_2323.py  0003_auto_20211220_2220.py  (+8 more)
backend/offers/: admin.py  apps.py  mails.py  models.py  tests.py  urls.py  views.py
backend/order/: admin.py  apps.py  mails.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/products/: admin.py  apps.py  filters.py  mails.py  models.py  tests.py  urls.py  views.py
backend/providers/: admin.py  mails.py  models.py  tests.py  urls.py  views.py
backend/purchase_order/: admin.py  models.py
backend/scripts/: local_ci.sh  serve.sh
backend/users/: admin.py  models.py  tests.py  urls.py  views.py
backend/utils/: tests.py
(+328 files in other folders)
