[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Topiltzin Hernández Mares <topiltzin.hernandez@crabti.com>"]

[tool.poetry.dependencies]
python = "3.8.1"
django = "^3.2.7"
mysqlclient = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
